<resources>
    <string name="app_name">bankingkharisma</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">password</string>
    <string name="hint_confrim_password">confirm password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Succesful</string>
    <string name="text_not_member">No Account Yet ? Create One</string>
    <string name="text_already_member">Already a Member ? Login</string>
    <string name="error_email_exists">Email Already Exist</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member ? Login </string>
    <string name="hint_money">Money</string>
</resources>
